Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMuBqZ3/eFeVRFWn602pKyu",
+      "authorship_tag": "ABX9TyMKUv0I3yPBeEJp4QIoAYUF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -362,13 +362,21 @@
         "id": "ydVLlvnPsYn3"
       },
       "source": [
-        "理解確認問題 1.1 次の集合の元をすべて示す\n",
+        "理解確認問題 1.1 p.6 次の集合の元をすべて示す\n",
         "\n",
         "(1) $\\{n\\in \\mathbf N \\ |\\ n = n^2\\}$ #=> {0,1}\n",
         "\n",
         "(2) $\\{n\\in \\mathbf Z \\ |\\ n^3 + 1 = 0\\}$ #=> {-1}\n",
         "\n",
-        "(3) "
+        "(3) $\\{2n+1 \\ |\\ n は 10 以下の素数\\}$ #=> {5,7,11,15}\n",
+        "\n",
+        "(4) $\\{n\\in \\mathbf N \\ |\\ 10 \\leq n^2 \\leq 100\\}$ #=> {4,5,6,7,8,9,10}\n",
+        "\n",
+        "(5) $\\{x \\in \\mathbf Q \\ |\\ 0 \\lt x \\lt 1 \\land 10x \\in \\mathbf N\\}$ #=> {0.1,0.2,$\\cdots$,0.9}\n",
+        "\n",
+        "(6) $\\{\\gcd (x, x+1)\\ |\\ x \\in \\mathbf N\\}$ #=> 1\n",
+        "\n",
+        "(7) "
       ]
     },
     {
