Colaboratory を使用して作成しました

--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNLKl3ngjiXjr9TSBjC8tJP",
+      "authorship_tag": "ABX9TyM3wDFd1F6QIVu9LydO1Ceg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -393,11 +393,15 @@
       "source": [
         "理解度確認問題 1.2 p.6 次の式の意味を言う\n",
         "\n",
-        "(1) $2\\ |\\ x \\land 3\\ |\\ x \\implies 6\\ |\\ x$ #=> x が 2で割り切れ、かつ 3で割り切れるならば、x は 6 で割り切れる\n",
+        "(1) $2\\ |\\ x \\land 3\\ |\\ x \\implies 6\\ |\\ x\\quad$ #=> x が 2で割り切れ、かつ 3で割り切れるならば、x は 6 で割り切れる\n",
         "\n",
-        "(2) $x$ が素数 $\\implies \\not \\exists y \\in \\mathbf Z[x=4y]$ x が素数ならば x は 4 の倍数ではない\n",
+        "(2) $x$ が素数 $\\implies \\not \\exists y \\in \\mathbf Z[x=4y]\\quad$ #=> x が素数ならば x は 4 の倍数ではない\n",
         "\n",
-        "(3)"
+        "(3) $x \\in \\mathbf R \\land x^3 > 0 \\iff x \\in \\mathbf R \\land x \\gt 0\\quad$ #=> 実数 $x$ の 3乗が 0 より大きいことと、$x$ が 0 より大きいことは等価である。\n",
+        "\n",
+        "(4) $\\forall x \\in \\mathbf R \\ \\forall y \\in \\mathbf R [x \\lt y \\implies \\exists z \\in \\mathbf R [x \\lt z \\lt y]\\quad$ #=> どんな 2つの異なる実数の間にもそれらと異なる実数が存在する\n",
+        "\n",
+        "(5) $$"
       ]
     },
     {
