Colaboratory を使用して作成しました

--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODefi6kg1PPBP3Ytr5jJ80",
+      "authorship_tag": "ABX9TyNrlvbB9PpWZzq4Qj6YD7kW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,15 @@
         "\n",
         "を読む。\n",
         "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KBtzB0Jgy21S"
+      },
+      "source": [
+        "# Colab 云々\n"
       ]
     },
     {
@@ -2121,6 +2130,17 @@
       "source": [
         "# 逆"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3f_0FHsH08kZ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
