Colaboratory を使用して作成しました

--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOd4Lrx+lqD/qLXEz4TDeMZ",
+      "authorship_tag": "ABX9TyMlnJB/LWhFvJ046S+sy5Za",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,17 +55,6 @@
         "\n",
         "&nbsp;\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6EGBmQg_K6zq"
-      },
-      "source": [
-        "う"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -324,15 +313,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8GTGgI2hLG4O"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_7b387Od0GaN"
       },
       "source": [
@@ -393,12 +373,40 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8GTGgI2hLG4O"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8rY73fTL-tE7"
       },
       "source": [
         "練習問題 3 p.9\n",
         "\n",
-        "(1) $\n"
+        "(1) $\\exists n \\in \\mathbf N,\\ \\sqrt n \\in \\mathbf N$\n",
+        "\n",
+        "日本語訳: その平方根をとると自然数であるような自然数が存在する。\n",
+        "\n",
+        "(2) $\\forall x \\in \\mathbf R^*, \\frac1x \\in \\mathbf R$\n",
+        "\n",
+        "日本語訳: 0 を除く任意の実数を分母とし、分子を 1 とする分数は実数である。\n",
+        "\n",
+        "(3) $\\forall a \\in \\mathbf R^*,\\ \\forall x \\in \\mathbf R,\\ \\exists x \\in \\mathbf R,\\ ax+b=0$\n",
+        "\n",
+        "日本語訳: 実数 $a,b$ ただし $a \\neg 0$ について、$ax+b=0$ となる実数 $x$ が存在する。\n",
+        "\n",
+        "(4) $\\exists a \\in \\mathbf R,\\ \\forall x \\in \\mathbf R,\\ |\\sin x| \\leq a$\n",
+        "\n",
+        "日本語訳: 任意の実数 $x$ について $\\sin x$ の絶対値が $a$ 以下であるような実数 $a$ が存在する。\n",
+        "\n",
+        "(5) 複素数の中には絶対値が 1 となる数が存在する。\n",
+        "\n",
+        "論理記号訳: $\\exists z \\in \\mathbf C,\\ |z| = 1$\n",
+        "\n"
       ]
     },
     {
