--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8f9tTeAGSRrONjILUNbkc",
+      "authorship_tag": "ABX9TyNmlESEuePN3XlaGfH42+yl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -834,15 +834,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8GTGgI2hLG4O"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1fxfUZC5l2jF"
       },
       "source": [
@@ -864,6 +855,53 @@
       },
       "source": [
         "説明 p.13\n",
+        "\n",
+        "$A_1=\\{2,4,6,\\cdots,98,100\\}$\n",
+        "\n",
+        "$B_1=\\{1,3,5,\\cdots,99\\}$\n",
+        "\n",
+        "などは有限集合であるが、\n",
+        "\n",
+        "$A_2=\\{2,4,6,\\cdots\\} = \\{m \\ |\\ m = 2k, \\ k \\in \\mathbf N\\}$\n",
+        "\n",
+        "$B_2=\\{1,3,5,\\cdots\\} = \\{m \\ |\\ m = 2k-1, \\ k \\in \\mathbf N\\}$\n",
+        "\n",
+        "や、$\\mathbf{N,Z,Q,R,C}$ はすべて無限集合である。\n",
+        "\n",
+        "\n",
+        "これらの数の集合の中で $\\mathbf Z$ と $\\mathbf Q$ の要素はともに $\\mathbf N$ の要素と 1 対 1 に対応をつけることができるが、$\\mathbf R$ と $\\mathbf C$ の要素は $\\mathbf N$ の要素と 1 対 1 に対応をつけることができない。\n",
+        "\n",
+        "有限集合および $\\mathbf {N,Z,Q}$ は離散集合、可算集合、可付番集合などと呼ばれる。\n",
+        "\n",
+        "$A$ が有限集合の場合、要素の数を\n",
+        "\n",
+        "$n(A), |A|, \\#(A)$\n",
+        "\n",
+        "などで表す。\n",
+        "\n",
+        "有限集合の要素の数については次の定理が成立する。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8GTGgI2hLG4O"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TdiX72mEJ_BI"
+      },
+      "source": [
+        "定理 1.4 p.13\n",
         "\n"
       ]
     },
