Colaboratory を使用して作成しました

--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmlESEuePN3XlaGfH42+yl",
+      "authorship_tag": "ABX9TyM9dZgfe74aU6rXZhjz5Gfq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -902,7 +902,29 @@
       },
       "source": [
         "定理 1.4 p.13\n",
+        "\n",
+        "$U$ を有限な全体集合とする。\n",
+        "\n",
+        "$A,B$ を $U$ の部分集合とするとき、次の式が成立する。\n",
+        "\n",
+        "1. $n(A\\cup B) = n(A)+n(B)-n(A\\cap B)$\n",
+        "\n",
+        "1. $n(\\overline A) =n(U) - n(A)$\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P10Ndf7XXbMi"
+      },
+      "source": [
+        "例題 6 p.14\n",
+        "\n",
+        "$U=\\{\\}$ を全体集合とし"
       ]
     },
     {
