Colaboratory を使用して作成しました

--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNAYBFw7UYPBp56FGe/CFAG",
+      "authorship_tag": "ABX9TyOj0HgXgHwn7atgb0niVIl+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -924,7 +924,39 @@
       "source": [
         "例題 6 p.14\n",
         "\n",
-        "$U=\\{\\}$ を全体集合とし"
+        "$U=\\{m\\ |\\ 1 \\leq m \\leq 100, \\ m \\in \\mathbf N\\}$ を全体集合とし\n",
+        "\n",
+        "$A=\\{m\\ |\\ m=5k,\\ k\\in \\mathbf N\\}$、$B=\\{m\\ |\\ m=7k,\\ k\\in \\mathbf N\\}$\n",
+        "\n",
+        "とするとき、次の値を求める。\n",
+        "\n",
+        "1. $n(A),\\ n(B),\\ n(A \\cap B)$\n",
+        "2. $n(A\\cup B),\\ n(\\overline A),\\ n(B)$\n",
+        "3. $n(\\overline A \\cup \\overline B),\\ n(\\overline A \\cap \\overline B)$\n",
+        "\n",
+        "ド・モルガンの法則をつかってもよい。\n",
+        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p9t5g3ijiGFe"
+      },
+      "source": [
+        "# 命題"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PHe-tiPJiKYZ"
+      },
+      "source": [
+        "定義\n",
+        "\n",
+        "真か偽か 真か偽か 真か偽か"
       ]
     },
     {
