--- a/math_topologicalspace_matsuzaka.ipynb
+++ b/math_topologicalspace_matsuzaka.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "math_topologicalspace_matsuzaka.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMYbH63fEc5pdgl25lJIRAj",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMAi4a14ARNW3hIWmGEiQgi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +97,38 @@
         "\n",
         "ブロック体\n",
         "\n",
-        "$\\mathbf{ABCDEFGHIJKLMNOPQRSTUVWXYZ}$\n"
+        "$\\mathbf{ABCDEFGHIJKLMNOPQRSTUVWXYZ}$\n",
+        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j1OsH6XyWPpX"
+      },
+      "source": [
+        "# 集合と写像"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5IWwJHr9WS9Q"
+      },
+      "source": [
+        "集合の説明ののっけから集合の例として\n",
+        "\n",
+        "* 自然数全体の集まり\n",
+        "* $0\\leq x\\leq 1$ であるような実数 $x$ 全体の集まり (これはいわゆる実数の閉区間 $[0,1]$ である)\n",
+        "* 10 より小さい正の素数全体の集まり\n",
+        "* $x^2+y^2 \\lt 1$ という不等式を満たす平面上の点 $(x,y)$ 全体の集まり (これは原点を中心とする半径 1 の円の内部にほかならない)\n",
+        "* 実数の閉区間 $[0,1]$ で定義された連続な実数値関数全体の集まり\n",
+        "* $p,q,r$ という 3 つの文字の集まり\n",
+        "* $p,q,r$ という 3 つの文字の順列全体の集まり\n",
+        "\n",
+        "などはいずれも集合である、と始まっている。\n",
+        "\n"
       ]
     }
   ]
