--- a/math_topologicalspace_matsuzaka.ipynb
+++ b/math_topologicalspace_matsuzaka.ipynb
@@ -6,7 +6,7 @@
       "name": "math_topologicalspace_matsuzaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqB7zp/KyDYpR+VjwB+OFM",
+      "authorship_tag": "ABX9TyPn4wo84rvdhTBOqxB/i6yp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "\n",
         "$\\{\\ \\}$\n",
         "\n",
-        "\n"
+        "&nbsp;\n"
       ]
     }
   ]
