Colaboratory を使用して作成しました

--- a/math_discrete.ipynb
+++ b/math_discrete.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBcCO3ioQbSnnst4M1Tir5",
+      "authorship_tag": "ABX9TyMwES/GL7E7Xq+PoZ9DwDun",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1105,15 +1105,13 @@
         "\n",
         "命題 $p,q$ の真偽 $\\mathrm{T,F}$ により右表の真理値をもつ命題 $p\\lor q, p\\land q$ について\n",
         "\n",
-        "\n",
-        "$p \\ q$ | `$p \\lor q$` | $p \\land q$ \n",
-        "--- | --- | ---\n",
-        "$\\mathrm{T,F}$ | kkk |kkk\n",
-        "$\\in$ | \\in | 属する、元である、含まれる\n",
-        "\n",
-        "$p \\ q$ | $p\\lor q$ | $p \\land q$ \n",
-        "--- | :-: | ---\n",
-        "$\\in$ | \\in | 属する、元である、含まれる\n"
+        "$p$ $\\ $ $q$ | $p$ $\\lor$ $q$ | $p$ $\\land$ $q$ \n",
+        "--- | :-: | :-: \n",
+        "$\\mathrm{T}$ $\\ \\ $ $\\mathrm{T}$ | $\\mathrm{T}$ | $\\mathrm{T}$\n",
+        "$\\mathrm{T}$ $\\ \\ $ $\\mathrm{F}$ | $\\mathrm{T}$ | $\\mathrm{F}$\n",
+        "$\\mathrm{F}$ $\\ \\ $ $\\mathrm{T}$ | $\\mathrm{T}$ | $\\mathrm{F}$\n",
+        "$\\mathrm{F}$ $\\ \\ $ $\\mathrm{F}$ | $\\mathrm{F}$ | $\\mathrm{F}$\n",
+        "\n"
       ]
     },
     {
