Colaboratory を使用して作成しました

--- a/chartmatha02logic.ipynb
+++ b/chartmatha02logic.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmatha02logic.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPIOrHTcnfAvVHTPSqWCvcJ",
+      "authorship_tag": "ABX9TyO2tQipdUwl2dCuLgWodvoz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,15 +58,6 @@
         "\n",
         "ただの丸括弧は式のまとめに使うので、それ以外の使い方があるのかどうか。 なにかのテキストに丸括弧は性質に使う、と書いてあった。 そもそも性質とは数学的にはなんなのか。\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TfOvfOImls48"
-      },
-      "source": [
-        "# いまここ p.304"
       ]
     },
     {
@@ -152,7 +143,35 @@
       "source": [
         "基本例題 61 p.306 次の命題の真偽を調べる。\n",
         "\n",
-        "(1)"
+        "1. $x=0 \\implies xy=0$ $\\quad$ True\n",
+        "2. $x^2=9 \\implies x=3$ $\\quad$ False $\\quad$ 反例 $x = -3$\n",
+        "3. $x \\neq 1 \\implies x \\geq 2$ $\\quad$ False 反例 $x = 0.1$\n",
+        "4. $x+y \\gt 0 \\land xy \\gt 0 \\implies x \\gt 0 \\land y \\gt 0$ $\\quad$ True\n",
+        "5. $x^2+y^2=0 \\implies x=y=0$ $\\quad$ True\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Af7Dzjsn4LeY"
+      },
+      "source": [
+        "実数 $x,y$ に対して $x^2+y^2=0 \\Longleftrightarrow x=y=0$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TfOvfOImls48"
+      },
+      "source": [
+        "# いまここ\n",
+        "\n",
+        "高校数学はどうやら全称記号 $\\forall$ 、存在記号 $\\exists$ は使わないようである。 なので高校数学、チャート式の論理と集合で論理式を学ぶのは効果が少ない。\n",
+        "\n",
+        "一方、あまり精査せずにカンマをつかっている。 カンマを使う場合にはそれなりの説明が欲しいがあまりつっこんでいない。\n"
       ]
     }
   ]
