Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyrex2yy73VWr80/sRws6c",
+      "authorship_tag": "ABX9TyPCViW1eqzWEotT6g4/qUio",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,6 +141,18 @@
         "変数を含む言明であっても、$\\forall$ や $\\exists$ がつくと命題になる。 全称記号や存在記号を限量子 quantifier と言う。\n",
         "\n",
         "$p = \\forall x p(x) \\quad$ 任意の $x$ に対して $p(x)$ である。\n",
+        "\n",
+        "$q = \\exists y q(4,y)$ %\\quad$ ある整数 $y$ が存在して $q(4,y)$ である。\n",
+        "\n",
+        "ドメインは次のように明示することもある。\n",
+        "\n",
+        "$p = \\forall x \\in D \\ p(x)$\n",
+        "\n",
+        "$q = \\exists y \\in \\mathbf Z \\ q(4,y)$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ]
