Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMxuINU9gsKKrKFw7kYaVqR",
+      "authorship_tag": "ABX9TyPo3FcKvmshUKt6tKAOJ0tC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,8 +61,9 @@
         "\n",
         "ウィキペディアでは次のような表示になっています。\n",
         "\n",
-        "$\\forall {\\epsilon > 0} \\: \\exists _{\\delta > 0} \\: \\forall _{x \\in \\Re} \\: s.t \\: (0 < |\\:x - a\\:| < \\delta \\: \\Rightarrow \\: |\\:f(x) - f(a)\\:| < \\epsilon) \n",
-        "$"
+        "$\\forall \\varepsilon > 0,\\;\\ \\exists \\delta > 0 ;\\; \\forall x \\in \\mathbf R \\ (0 < |\\:x - a\\:| < \\delta \\: \\Rightarrow \\: |\\:f(x) - f(a)\\:| < \\epsilon)$\n",
+        "\n",
+        "$\\forall \\varepsilon > 0,\\  \\exists \\delta > 0 ;\\; \\forall x \\in \\mathbf R \\ (0 < |\\:x - a\\:| < \\delta \\: \\Rightarrow \\: |\\:f(x) - f(a)\\:| < \\epsilon)$"
       ]
     },
     {
