Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPo3FcKvmshUKt6tKAOJ0tC",
+      "authorship_tag": "ABX9TyNbCH4NFdgXDpTEBBuy7d8u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QkYyREw7ERBR"
+      },
+      "source": [
+        "# スペース実験\n",
+        "$A\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}B$  \n",
+        "$A\\ {}\\ {}\\ {}\\ {}\\ {}\\ {}\\ {}\\ {}\\ {}\\ {}B$\n",
+        "\n",
+        "$A\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}\\;{}B$  \n",
+        "$A\\:{}\\:{}\\:{}\\:{}\\:{}\\:{}\\:{}\\:{}\\:{}\\:{}B$  \n",
+        "\n",
+        "$A\\quad{}\\quad{}B$  \n",
+        "$A\\qquad B$  \n",
+        "$A\\quad\\quad B$  \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N6vtdcq0MaZ5"
       },
       "source": [
@@ -57,11 +76,56 @@
         "\n",
         "latex で論理式、論理記号文を書いていて、テキストによって括弧 (丸括弧 parenthesis、角括弧 bracket、波括弧 braces) の使い方に揺れがあったりして、あとカンマの使い方、どういう場合に省略するのか。 と考えていてイプシロンデルタ論法の数式で比べよう、と思いつきました。\n",
         "\n",
+        "日本の離散数学などのテキストでは次のような表示になっている。\n",
+        "\n",
+        "$\\forall\\varepsilon \\gt 0 \\;\\;\\exists\\delta \\gt 0 \\;\\; \\forall x \\in \\mathbf R \\;\\;(0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon)$\n",
+        "\n",
+        "日本語のウィキペディアでは次のような表示になっていた。\n",
+        "\n",
+        "${}^{\\forall} \\varepsilon \\gt 0,\\;^{\\exists} \\delta \\gt 0 ;\\;^{\\forall} x \\in \\mathbf R\\;[0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon]$\n",
+        "\n",
         "英語では epsilon-delta definition of limit と言うそうです。\n",
         "\n",
-        "ウィキペディアでは次のような表示になっています。\n",
+        "英語のウィキペディアでは次のような表示になっていた。\n",
         "\n",
-        "$\\forall \\varepsilon > 0,\\;\\ \\exists \\delta > 0 ;\\; \\forall x \\in \\mathbf R \\ (0 < |\\:x - a\\:| < \\delta \\: \\Rightarrow \\: |\\:f(x) - f(a)\\:| < \\epsilon)$\n",
+        "$\\forall\\varepsilon \\gt 0,\\;\\exists\\delta \\gt 0 ;\\;\\forall x \\in \n",
+        "\\mathbf R,\\;0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon$\n",
+        "\n",
+        "たぶんどれも正しいのだとして、自分の好みとわかりやすさでは日本のテキストの表示がよいと思う。 カンマやセミコロンで明確に区別できるのかもしれないが、カンマやセミコロンは論理記号式以外でも使われるので、いずれにしても文脈で確認しなくてはいけないので、それならばスペースがよい。 命題を角括弧 bracket で囲むのは話としてはわかるが通常の丸括弧 parenthesis で十分だと思う。 その証拠に英語のウィキペディアでは囲ってもいない。 囲まないルールはわかりにくくなると思うのでなんらかの方法で囲った方がよいと思う。\n",
+        "\n",
+        "あと、全称記号 $\\forall$ と 存在記号 $\\exists$ を小さく前上付きにするのはみんなが同じルールならばわかりやすいとは思うが揺れがあるのだったら普通の大きさで変数の前につけて問題ないと思う。\n",
+        "\n",
+        "latex でのソースは以下である。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "日本ののテキスト\n",
+        "```\n",
+        "$\\forall\\varepsilon \\gt 0 \\;\\;\\exists\\delta \\gt 0 \\;\\; \\forall x \\in \\mathbf R \\;\\;(0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon)$\n",
+        "```\n",
+        "日本語のウィキペディア\n",
+        "```\n",
+        "${}^{\\forall} \\varepsilon \\gt 0,\\;^{\\exists} \\delta \\gt 0 ;\\;^{\\forall} x \\in \\mathbf R\\;[0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon]$\n",
+        "```\n",
+        "英語のウィキペディア\n",
+        "```\n",
+        "$\\forall\\varepsilon \\gt 0,\\;\\exists\\delta \\gt 0 ;\\;\\forall x \\in \n",
+        "\\mathbf R,\\;0 \\lt |x - a| \\lt \\delta\\implies |f(x) - f(a)| \\lt \\varepsilon$\n",
+        "```\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q01OL0mEJLy8"
+      },
+      "source": [
+        "\n",
         "\n",
         "$\\forall \\varepsilon > 0,\\  \\exists \\delta > 0 ;\\; \\forall x \\in \\mathbf R \\ (0 < |\\:x - a\\:| < \\delta \\: \\Rightarrow \\: |\\:f(x) - f(a)\\:| < \\epsilon)$"
       ]
