Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbCH4NFdgXDpTEBBuy7d8u",
+      "authorship_tag": "ABX9TyOQ0Dc29THX5eXHjt0IXzfS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,52 @@
       },
       "source": [
         "# メモ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4r3BK_q-phSh",
+        "outputId": "488f920e-1aa1-43cb-f578-c6f89c098a99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = 5 * sqrt(2) - 7\n",
+        "expr = expr**Rational(1,3)\n",
+        "display(expr)\n",
+        "solve((sqrt(2)*x +y)**3 - (expr)**3)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\sqrt[3]{-7 + 5 \\sqrt{2}}$",
+            "text/plain": [
+              "(-7 + 5*sqrt(2))**(1/3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{x: nan}]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
       ]
     },
     {
