--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNku86jb77gcuy0l8DDL+QJ",
+      "authorship_tag": "ABX9TyO+VzxaKdyGpcH600u8V8o5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1037,6 +1037,43 @@
           },
           "execution_count": 28
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DoT2xU16nJkT",
+        "outputId": "2698307b-f988-4699-f8a8-f7f3cc544739",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(0.25.as_integer_ratio())"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fWlVy_nNnTdo"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -5280,15 +5317,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qsMHE8EfGfRz"
-      },
-      "source": [
-        "# ここは最後"
-      ]
     }
   ]
 }
