Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+VzxaKdyGpcH600u8V8o5",
+      "authorship_tag": "ABX9TyMDaBhmF6mVt0yu3lSiVIry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1043,15 +1043,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DoT2xU16nJkT",
-        "outputId": "2698307b-f988-4699-f8a8-f7f3cc544739",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2698307b-f988-4699-f8a8-f7f3cc544739"
       },
       "source": [
         "type(0.25.as_integer_ratio())"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1065,15 +1065,6 @@
           },
           "execution_count": 1
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fWlVy_nNnTdo"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -2000,7 +1991,7 @@
         "\n",
         "**タプル (tuple)** はリストと同様に複数の要素をまとめた型だが、リストとは異なる点として、定義した後に**中の要素を変更できない**と言う性質を持つ。\n",
         "\n",
-        "タプルの定義には parenthesis `( )`を用いる。"
+        "タプルの定義には丸括弧 parenthesis `( )`を用いる。"
       ]
     },
     {
@@ -2161,6 +2152,15 @@
         "`tuple` のように中身が変更できない性質のことを**イミュータブル (immutable)**であると言う。反対に、`list` のように中身が変更できる性質のことを**ミュータブル (mutable)**であると言う\n",
         "\n",
         "タプルも Chainer でデータセットを扱うときなどに頻出する型である。その性質と取り扱い方を覚えておく。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BIugqP_H8ose"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
