Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMp6T3if3t1tuZ9rIk/tzfU",
+      "authorship_tag": "ABX9TyOjp1rMDRgP1Ojm3X521eNl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5499,7 +5499,7 @@
         "同様に、4 次元以上の場合でも、$N$ 次元にスカラを並べたもの（つまり、要素を指定するのに $N$ 個のインデックスが必要なもの）を $N$ 階のテンソルと言う。例えば、多くのディープラーニングフレームワークでは、複数枚の画像の集まりを「画像のインデックス1つ」+「各画像のインデックス 3 つ（幅、高さ、チャンネル）」の 4 階テンソルとして表現する。\n",
         "前述のようにベクトルや行列はテンソルの一種とみなすことができるが、本資料では単に「テンソル」と言った場合は3階以上のテンソルを指す。\n",
         "\n",
-        "![テンソル](https://github.com/kalz2q/mycolabnotebooks/blob/master/images/05/05_tensor.png?raw=1)\n",
+        "![テンソル](https://tutorials.chainer.org/ja/_images/05_tensor.png)\n",
         "\n",
         "\n",
         "### 変数の形と字体の関係\n",
