Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN3i+VjFNXC9Y3Lnas7KkaK",
+      "authorship_tag": "ABX9TyOZ2XGSZ8G+j4Y3qjBmICkR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7206,7 +7206,8 @@
         "\n",
         "**図表**\n",
         "\n",
-        "![母集団と標本集団](https://github.com/kalz2q/mycolabnotebooks/blob/master/images/03/03_10.png?raw=1)\n",
+        "![母集団と標本集団](https://tutorials.chainer.org/ja/_images/03_10.png)\n",
+        "\n",
         "\n",
         "例えば、全国の小学生の身長と体重の分散を調べたいとする。このとき、全国の小学生を一人の抜け漏れもなく調べたなら、集まったデータは**母集団 (population)** と呼ばれます。\n",
         "一方、各都道府県の小学生を100人ずつ調べた場合、そのデータは**標本集団 (sample population)** と言う。\n",
