Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiI8U4iOxWiFlsjXyLIMaI",
+      "authorship_tag": "ABX9TyNgzZzOld7PfjlQdeP8/ObE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5901,7 +5901,8 @@
         "\n",
         "**図表**\n",
         "\n",
-        "![演算後の行列](https://github.com/kalz2q/mycolabnotebooks/blob/master/images/05/05_shape_after_calculation.png?raw=1)\n",
+        "![演算後の行列](https://tutorials.chainer.org/ja/_images/05_shape_after_calculation.png)\n",
+        "\n",
         "\n",
         "特に (3) では、一番左端のベクトルと、真ん中の行列の乗算結果が、行ベクトルであるため、サイズの変化が (1) と同じケースに帰着することに注意する。\n",
         "\n",
