Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7qgRk12VcvwRuG5yauQ99",
+      "authorship_tag": "ABX9TyOGP7YPPlnA9az6AGSYF+3S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5669,7 +5669,7 @@
         "\n",
         "**図表**\n",
         "\n",
-        "![行列積](https://github.com/kalz2q/mycolabnotebooks/blob/master/images/05/05_matrix_product.png?raw=1)"
+        "![行列積](https://tutorials.chainer.org/ja/_images/05_matrix_product.png)\n"
       ]
     },
     {
