Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiBnZjuAvYGFSdT3OBySC/",
+      "authorship_tag": "ABX9TyPQMK8EEhLKOUg+qlVPSH7Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,9 @@
         "\n",
         "ベクトルの大きさを  $|\\overrightarrow{\\mathrm{AB}}|$ と書く。 \n",
         "\n",
-        "$\\vec a , \\mathbf{a} , | \\vec a |$ と書くこともある。 \n",
+        "$\\vec a , \\pmb{a} , | \\vec a |$ と書くこともある。 \n",
         "   \n",
-        "大きさが 1 であるベクトルを単位ベクトルという。 "
+        "大きさが 1 であるベクトルを単位ベクトルという。 \n"
       ]
     },
     {
