Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "chainer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHTnldMv2Wp6hDG8As/6pO",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMsro/I+K+itzTw2rEtrkcq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5532,21 +5533,43 @@
         "$N$ 次元の列ベクトルはサイズが $(N, 1)$ の行列、 $N$ 次元の行ベクトルはサイズが $(1, N)$ の行列と見ることができる。\n",
         "スカラ、ベクトルの場合と並行して、行列 ${\\bf X}$ のサイズが $(N, M)$ であり、各要素が実数であることを、「${\\bf X} \\in \\mathbb{R}^{N \\times M}$」 とも書く。例えば、先程の ${\\bf X}$ については ${\\bf X}\\in \\mathbb{R}^{3\\times 2}$ である。\n",
         "\n",
-        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gPi_bHMbWMEJ"
+      },
+      "source": [
         "**テンソル (tensor)** はベクトルや行列を一般化した概念である。\n",
-        "例えば、ベクトルは 1 方向に、行列は 2 方向にスカラが並んでいる。これは「ベクトルは 1 階のテンソルで、行列は 2 階のテンソルである」であることを意味する。\n",
-        "この考え方をさらに進めて、下図のように行列を奥行き方向にさらに並べたものを3階のテンソルと呼ぶ。例えば、カラー画像をデジタル表現する場合、1 枚の画像は RGB (Red Green Blue) の3枚のレイヤー（チャンネルと呼ぶ）を持つのが一般的である。\n",
+        "\n",
+        "例えば、ベクトルは 1 方向に、行列は 2 方向にスカラが並んでいる。\n",
+        "\n",
+        "これは「ベクトルは 1 階のテンソルで、行列は 2 階のテンソルである」であることを意味する。\n",
+        "\n",
+        "この考え方をさらに進めて、行列を奥行き方向にさらに並べたものを3階のテンソルと呼ぶ。\n",
+        "\n",
+        "例えば、カラー画像をデジタル表現する場合、1 枚の画像は RGB (Red Green Blue) の3枚のレイヤー（チャンネルと呼ぶ）を持つのが一般的である。\n",
+        "\n",
         "各チャンネルは行列として表され、その行列がチャンネル方向に複数積み重なっているため、画像は 3 階テンソルとみなすことができる。\n",
+        "\n",
         "3 階のテンソルは、特定の要素を指定するのに「上から 3 番目、左から 2 番目、手前から 5 番目」のように整数（インデックス）を3個必要とする。\n",
         "\n",
         "同様に、4 次元以上の場合でも、$N$ 次元にスカラを並べたもの（つまり、要素を指定するのに $N$ 個のインデックスが必要なもの）を $N$ 階のテンソルと言う。例えば、多くのディープラーニングフレームワークでは、複数枚の画像の集まりを「画像のインデックス1つ」+「各画像のインデックス 3 つ（幅、高さ、チャンネル）」の 4 階テンソルとして表現する。\n",
+        "\n",
         "前述のようにベクトルや行列はテンソルの一種とみなすことができるが、本資料では単に「テンソル」と言った場合は3階以上のテンソルを指す。\n",
         "\n",
-        "**図表**\n",
-        "\n",
-        "![テンソル](https://tutorials.chainer.org/ja/_images/05_tensor.png)\n",
-        "\n",
-        "\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4p1rd1mjWxbr"
+      },
+      "source": [
         "### 変数の形と字体の関係\n",
         "\n",
         "多くの教科書（特に線形代数の教科書）では、変数を一目見てその型が何かがわかるように、特定の形（ベクトル、行列など）の変数には特定の字体を用いると言う工夫がされている。\n",
@@ -5556,7 +5579,18 @@
         "|  字体  | 小文字         | 大文字         |\n",
         "|:------:|:--------------:|:--------------:|\n",
         "| 細字   | スカラの変数 ($a, b$ など) | スカラの定数 ($A, B$ など) |\n",
-        "| 太字   | ベクトル (${\\bf x}, {\\bf y}$ など)       | 行列、テンソル (${\\bf A}, {\\bf B}$ など) |"
+        "| 太字   | ベクトル (${\\bf x}, {\\bf y}$ など)       | 行列、テンソル (${\\bf A}, {\\bf B}$ など) |\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ox73dANRW-sn"
+      },
+      "source": [
+        "# いまここ 2"
       ]
     },
     {
@@ -5568,7 +5602,9 @@
         "### 加算・減算・スカラ倍\n",
         "\n",
         "次に、ベクトル、行列、テンソルの演算について解説する。\n",
+        "\n",
         "**加算（足し算）**及び**減算（引き算）**は同じサイズのベクトル同士、行列同士、テンソル同士の間だけで成立する。\n",
+        "\n",
         "以下に、行列およびベクトル同士の加算を具体例で示す。\n",
         "\n",
         "**ベクトル同士の加算**\n",
