--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsro/I+K+itzTw2rEtrkcq",
+      "authorship_tag": "ABX9TyPuJtRQv6noyZARuy3GezAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,17 @@
         "- 機械学習・ディープラーニングの基礎的な理論\n",
         "- 画像認識や自然言語処理などに機械学習を応用する方法\n",
         "\n",
+        "が学べるとのこと。\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y-SPL9dGkwy4"
+      },
+      "source": [
         "1. `Open in Colab` から Colab へ移動\n",
         "2. 自分のドライブへノートブックをコピーする\n",
         "3. コードを実行しながら読んでいく\n",
