Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA+fzsfSmaPiSxtF6vVOBD",
+      "authorship_tag": "ABX9TyOnONRVmLhrOsEH6mAxESy1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -239,8 +239,15 @@
         "id": "Chdmx6HGIfEV"
       },
       "source": [
-        "Python では、`.` を含まない連続した数字を `int`、直前・直後も含め `.` が含まれる連続した数字を `float` だと自動的に解釈する。\n",
-        "例えば、`7` や `365` は `int` だが、`2.718`、`.25`、`10.` などは `float` になる。\n",
+        "Python では、`.` を含まない連続した数字を `int`、\n",
+        "\n",
+        "直前・直後も含め `.` が含まれる連続した数字を `float` \n",
+        "\n",
+        "だと自動的に解釈する。\n",
+        "\n",
+        "例えば、`7` や `365` は `int` だが、\n",
+        "\n",
+        "`2.718`、`.25`、`10.` などは `float` になる。\n",
         "\n",
         "実数の `0` は `0.0` とも `.0` とも `0.` とも書くことができる。"
       ]
@@ -335,9 +342,21 @@
         "id": "TDJRJR5vIfFe"
       },
       "source": [
-        "Python 3 では、 `/` 記号を用いて除算を行う場合、除数（割る数）と被除数（割られる数）が整数であっても、計算結果として実数が返る。\n",
-        "計算結果として実数を返す除算のことを特に、**真の除算 (true division)** と言う。\n",
-        "一方、商（整数部分）を返すような除算演算子として、 `//` 記号が用意されている。 `/` 記号を 2 回、間を空けずに繰り返す。計算結果として商を返す除算のことを、 **切り捨て除算 (floor division)** と呼ぶ。\n"
+        "Python 3 では、 `/` 記号を用いて除算を行う場合、\n",
+        "\n",
+        "除数（割る数）と被除数（割られる数）が整数であっても、\n",
+        "\n",
+        "計算結果として実数が返る。\n",
+        "\n",
+        "計算結果として実数を返す除算のことを特に、\n",
+        "\n",
+        "**真の除算 (true division)** と言う。\n",
+        "\n",
+        "一方、商（整数部分）を返すような除算演算子として、\n",
+        "\n",
+        " `//` 記号が用意されている。 \n",
+        " \n",
+        " 計算結果として商を返す除算のことを、 **切り捨て除算 (floor division)** と呼ぶ。\n"
       ]
     },
     {
@@ -512,9 +531,12 @@
       },
       "source": [
         "整数と文字列を連結したいこともある。  \n",
+        "\n",
         "例えば、`1` と言う整数に、 `'番目'` と言う文字列を足して `'1番目'` と言う文字列を作りたいような場合には、型を変換する**キャスト (cast)** と言う操作をする必要がある。\n",
         "\n",
-        "何かを `int` にキャストしたい場合は `int()` と言う組み込み関数を使い、`str` にキャストしたい場合は `str()` と言う組み込み関数を使う。"
+        "何かを `int` にキャストしたい場合は `int()` と言う組み込み関数を使い、\n",
+        "\n",
+        "`str` にキャストしたい場合は `str()` と言う組み込み関数を使う。"
       ]
     },
     {
