Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWWnHmwHgZpmUcUQmeSuz4",
+      "authorship_tag": "ABX9TyMuduLtj6TkPfvq81Wz+F9X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,23 +105,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yaZOweGzM5Fv",
-        "outputId": "8035f9e3-02f0-4ad4-e70a-21ca0707d559",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 402
-        }
+          "height": 428
+        },
+        "cellView": "form",
+        "id": "yaZOweGzM5Fv",
+        "outputId": "c704cc2f-e735-4355-93ae-f07b55260381"
       },
       "source": [
         "#@title\n",
         "%%html\n",
         "<style>\n",
-        "    table {\n",
+        "    /* table {\n",
         "        border-collapse: collapse;\n",
         "        border: 2px solid rgb(200, 200, 200);\n",
         "        letter-spacing: 1px;\n",
         "        margin: auto;\n",
-        "    }\n",
+        "    } */\n",
         "\n",
         "    td,\n",
         "    th {\n",
@@ -130,18 +131,21 @@
         "    }\n",
         "\n",
         "    tr:nth-child(even) td {\n",
-        "        background-color: rgb(250, 250, 250);\n",
+        "        /* background-color: rgb(250, 250, 250); */\n",
+        "        background-color: red;\n",
         "    }\n",
         "\n",
         "    tr:nth-child(odd) td {\n",
-        "        background-color: rgb(245, 245, 245);\n",
+        "        background-color: rgb(80,30,0);\n",
+        "        color: white;\n",
         "    }\n",
         "\n",
-        "    tr td:nth-child(3) {\n",
+        "    /* tr td:nth-child(3) {\n",
         "        color: red;\n",
         "        font-size: 300%;\n",
-        "    }\n",
+        "    } */\n",
         "</style>\n",
+        "\n",
         "<table>\n",
         "<thead>\n",
         "<tr>\n",
@@ -189,19 +193,19 @@
         "</tbody>\n",
         "</table>\n"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<style>\n",
-              "    table {\n",
+              "    /* table {\n",
               "        border-collapse: collapse;\n",
               "        border: 2px solid rgb(200, 200, 200);\n",
               "        letter-spacing: 1px;\n",
               "        margin: auto;\n",
-              "    }\n",
+              "    } */\n",
               "\n",
               "    td,\n",
               "    th {\n",
@@ -210,18 +214,21 @@
               "    }\n",
               "\n",
               "    tr:nth-child(even) td {\n",
-              "        background-color: rgb(250, 250, 250);\n",
+              "        /* background-color: rgb(250, 250, 250); */\n",
+              "        background-color: red;\n",
               "    }\n",
               "\n",
               "    tr:nth-child(odd) td {\n",
-              "        background-color: rgb(245, 245, 245);\n",
+              "        background-color: rgb(80,30,0);\n",
+              "        color: white;\n",
               "    }\n",
               "\n",
-              "    tr td:nth-child(3) {\n",
+              "    /* tr td:nth-child(3) {\n",
               "        color: red;\n",
               "        font-size: 300%;\n",
-              "    }\n",
+              "    } */\n",
               "</style>\n",
+              "\n",
               "<table>\n",
               "<thead>\n",
               "<tr>\n",
@@ -4967,8 +4974,14 @@
       },
       "source": [
         "以上で、Python の基本についての解説を終了する。\n",
+        "\n",
         "Python には他にもここでは紹介されていない多くの特徴や機能がある。\n",
-        "さらに詳しく学びたい方は、[Pythonチュートリアル](https://docs.python.org/ja/3/tutorial/index.html) などを参照する。"
+        "\n",
+        "Pythonチュートリアル \n",
+        "\n",
+        "https://docs.python.org/ja/3/tutorial/index.html\n",
+        "\n",
+        "&nbsp;"
       ]
     },
     {
